Bug #30975 cluster restart fails tsman table id assertion
Submitted: 12 Sep 2007 16:06 Modified: 5 Nov 2007 22:15
Reporter: Axel Schwenke
Status: Closed
Category:Server: Cluster Severity:S1 (Critical)
Version:5.1 OS:Linux
Assigned to: Jonas Oreland Target Version:

[12 Sep 2007 16:06] Axel Schwenke
Description:
Cluster restarted at 12:02:35

2007-09-12 12:03:11 [MgmSrvr] ALERT    -- Node 4: Forced node shutdown completed
. Occured during startphase 4. Initiated by signal 6. Caused by error 2341: 'Int
ernal program error (failed ndbrequire)(Internal error, programming error or mis
sing error message, please report a bug). Temporary error
2007-09-12 12:03:13 [MgmSrvr] ALERT    -- Node 3: Forced node shutdown completed
. Occured during startphase 4. Initiated by signal 6. Caused by error 2308: 'Ano
ther node failed during system restart, please investigate error(s) on other nod
e(s)(Restart error). Temporary error, restart node'.
...
2007-09-12 12:05:51 [MgmSrvr] ALERT    -- Node 3: Forced node shutdown completed
. Occured during startphase 4. Initiated by signal 6. Caused by error 2341: 'Int
ernal program error (failed ndbrequire)(Internal error, programming error or mis
sing error message, please report a bug). Temporary error
2007-09-12 12:05:52 [MgmSrvr] ALERT    -- Node 4: Forced node shutdown completed
. Occured during startphase 4. Initiated by signal 6. Caused by error 2341: 'Int
ernal program error (failed ndbrequire)(Internal error, programming error or mis
sing error message, please report a bug). Temporary error
...
[lots more of those]

the failed ndbrequire:

Time: Wednesday 12 September 2007 - 12:05:28
Status: Temporary error, restart node
Message: Internal program error (failed ndbrequire) (Internal error, programming
 error or missing error message, please report a bug)
Error: 2341
Error data: tsman.cpp
Error object: TSMAN (Line: 1802) 0x00000002
Program: ./ndbd
Pid: 15466
Trace: /var/mnt/local/MySQLClusterPreprov-0-A_DATA/ndb_3_trace.log.3
Version: mysql-5.1.15 ndb-6.1.19-beta

complete logs in CSC issue

How to repeat:
n/a
[21 Sep 2007 11:36] Jonas Oreland
E (0,1)
P0 OK
P1 UNINIT
U P0
U P1
[26 Sep 2007 19:24] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/34567

ChangeSet@1.2585, 2007-09-26 19:21:45+02:00, jonas@eel.hemma.oreland.se +8 -0
  ndb - bug#30975
    Add testcase
[27 Sep 2007 21:01] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/34604

ChangeSet@1.2586, 2007-09-27 21:00:51+02:00, jonas@eel.hemma.oreland.se +3 -0
  ndb - bug#30975
    more testcases
[28 Sep 2007 9:59] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/34628

ChangeSet@1.2510, 2007-09-28 09:58:56+02:00, jonas@perch.ndb.mysql.com +10 -0
  ndb - add new testcases/error insert bug#30975
    (recommit for correct merge order)
[29 Sep 2007 11:10] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/34673

ChangeSet@1.2511, 2007-09-29 11:10:12+02:00, jonas@perch.ndb.mysql.com +2 -0
  ndb - bug#30975
    add even more tests
[29 Sep 2007 11:28] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/34675

ChangeSet@1.2583, 2007-09-29 11:27:50+02:00, jonas@perch.ndb.mysql.com +8 -0
  ndb - bug#30975
    - only update extent pages *after* flush of real page has been done
    - sync both create/drop of table into undolog (for disk tables)
[6 Oct 2007 19:23] Jon Stephens
Documented bugfix in mysql-5.1.15-ndb-6.1.21 changelog.

Left status as Patch Pending.
[8 Oct 2007 15:54] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/35102

ChangeSet@1.2514, 2007-10-08 15:53:29+02:00, jonas@perch.ndb.mysql.com +8 -0
  ndb - bug#30975 (recommit to 51-telco-gca)
      - only update extent pages *after* flush of real page has been done
      - sync both create/drop of table into undolog (for disk tables)
[9 Oct 2007 8:13] Jonas Oreland
pushed to 51-ndb, telco-6.2, telco-6.3 and 51-telco
[10 Oct 2007 10:20] Jon Stephens
Bugfix also documented in mysql-5.1.22-ndb-6.2.7 changelog; left status as PQ.
[15 Oct 2007 19:40] Jon Stephens
Also documented in mysql-5.1.22-ndb-6.3.4 changelog; left status as PQ.
[5 Nov 2007 14:53] Bugs System
Pushed into 6.0.4-alpha
[5 Nov 2007 14:56] Bugs System
Pushed into 5.1.23-rc
[5 Nov 2007 22:15] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Also documented in 5.1.23 and 6.0.4 changelogs. Closed.