ndb - bug#30975 (recommit to 51-telco-gca)     - only update extent pages *after* flush of real page has been done     - sync both create/drop of table into undolog (for disk tables)